--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 @import url('../src/styles/Product.scss');
 @import url('../src/styles/item.scss');
 @import url('../src/styles/Footer.scss');
-@import url('../src/styles/login.scss');
+@import url('../src/styles/Login.scss');
 
 * {
   margin: 0;
